bk_ida/gccida/g0/recog_20
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25493:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2b = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25505:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3b = ( rtx)x2b[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25528:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x5a = ( rtx)x4[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25533:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = (  struct rtx_def *)x3d[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25536:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25537:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3f = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25540:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3f; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25549:44: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) ) 
                                           ^~~~~~~~~~~~
                                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25559:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25560:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25563:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25584:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25593:44: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) ) 
                                           ^~~~~~~~~~~~
                                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25604:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25605:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3h = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25620:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x5c = ( rtx)x4b[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25625:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4c = (  struct rtx_def *)x3h[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25628:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/insn-recog.c:25637:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( MINUS, DImode, recog_data_0.operand) ) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_20/src/obj/insn-recog.o] Error 1
